bug 1344459, make sure that locale and tree cells don't wrap on hyphen.

--- a/apps/shipping/static/shipping/css/dashboard.css
+++ b/apps/shipping/static/shipping/css/dashboard.css
@@ -14,6 +14,9 @@ div.thumbnail {
 .failure {
     background-color: red;
 }
+.locale_cell, .tree_cell {
+    white-space: nowrap;
+}
 .tree_cell.success {
     background-color: rgba(0, 128, 0, 0.5);
 }
